// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContainerEditAddressPage Should match Snapshot 1`] = `
<div
  className="sc-bdVaJa NWYyK"
/>
`;

exports[`InputAddress Should match Snapshot 1`] = `
<div
  className="MuiFormControl-root-1 sc-bwzfXH hGBRVj"
>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-28 MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`InputCity Should match Snapshot 1`] = `
<div
  className="MuiFormControl-root-1 sc-EHOje fBcYxG"
>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-28 MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`InputHouse Should match Snapshot 1`] = `
<div
  className="MuiFormControl-root-1 sc-bxivhb iomlTu"
>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-28 MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`InputNeighborhood Should match Snapshot 1`] = `
<div
  className="MuiFormControl-root-1 sc-ifAKCX bQwSPf"
>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-28 MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`InputNumber Should match Snapshot 1`] = `
<div
  className="MuiFormControl-root-1 sc-htpNat hYLqpk"
>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-28 MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`InputNumber Should match Snapshot 2`] = `
<div
  className="MuiFormControl-root-1 sc-htpNat hYLqpk"
>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-28 MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`InputState Should match Snapshot 1`] = `
<div
  className="MuiFormControl-root-1 sc-bZQynM kJaXIK"
>
  <div
    className="MuiInputBase-root-18 MuiInput-root-5 MuiInput-underline-9 MuiInputBase-formControl-19 MuiInput-formControl-6"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-28 MuiInput-input-13"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;
